<resources>
    <string name="app_name">Tetris</string>
    <string name="start">Новая игра</string>
    <string name="settings">Настройки</string>
    <string name="rating">Рейтинг</string>
    <string name="back">Назад</string>
    <string name="pause">Пауза</string>
    <string name="resume">Продолжить</string>
    <string name="restart">Заново</string>
    <string name="id">Место</string>
    <string name="score">Очки</string>
    <string name="date">Дата</string>
    <string name="PersonRate">Личный зачёт</string>
    <string name="worldRate">Мировой зачёт</string>
    <string name="logo">Лого в главном меню</string>

</resources>