<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical"
    tools:context=".menus.MainActivity">

    <LinearLayout
        android:id="@+id/topping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/main_top"
            android:contentDescription="@string/logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_stroke_black95_press_white"
            android:foregroundGravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/start"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnRatings"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:background="@drawable/btn_stroke_black95_press_white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/rating"
            android:textSize="24sp" />
    </LinearLayout>


</LinearLayout>